--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,7 @@ body {
 .advice__btn {
   position: absolute;
   bottom: 0;
+  display: block;
   left: 50%;
   transform: translate(-50%, 50%);
   background-color: $NeonGreen;
